--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -63,6 +63,7 @@
      <Compile Include="Assets\destroyer.cs" />
      <Compile Include="Assets\incomeBall.cs" />
      <Compile Include="Assets\moveWithHead.cs" />
+     <Compile Include="Assets\textController.cs" />
      <None Include="Assets\Cardboard\Resources\SkyboxMesh.shader" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
      <None Include="Assets\Cardboard\Resources\GUIScreen.shader" />
